# linux-example-btstack-handsfree-ag

./: CMakeLists.txt  README.md
app/: audio_platform_common.c  hfag.c  main.c
app_bt_config/: wiced_bt_cfg.c
include/: audio_platform_common.h  hfag.h
